// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Language Tour — Type Constructors > maybe type 1`] = `
[
  {
    "codegenJS": "function main() {
  const env_cls2 = {};
  const fnref_cls2 = closure_13;
  const closure_cls2 = {
    __fn: fnref_cls2,
    __env: env_cls2
  };
  return closure_cls2;
}

function closure_13(env0, a1) {
  const v0 = "Unit";
  const v1 = {
    just: a1,
    nothing: v0
  };
  return v1;
}
return main();
",
    "elaborated": "λ(a: Type) -> Variant [ just: a, nothing: Unit ]",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"Maybe"}
[3] lambda {"variable":"a","icit":"Explicit","level":1}
  :annotation -> [4]
  :body -> [5]
  :env -> [12]
[4] lit {"value":{"type":"Atom","value":"Type"}}
[5] app {"icit":"Explicit"}
  :arg -> [7]
  :func -> [6]
[6] lit {"value":{"type":"Atom","value":"Variant"}}
[7] row:ext {"label":"just"}
  :rest -> [9]
  :value -> [8]
[8] var:bound {"index":0}
  :refers_to -> [3]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
[9] row:ext {"label":"nothing"}
  :rest -> [11]
  :value -> [10]
[10] lit {"value":{"type":"Atom","value":"Unit"}}
[11] row:empty
[12] env
[13] closure
  :body -> [3]
  :env -> [12]",
    "ivl": "true",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let env_cls2 = alloc {  }
      let fnref_cls2 = &closure_13
      let closure_cls2 = alloc { __fn: fnref_cls2, __env: env_cls2 }
      return closure_cls2
  fn closure_13(env0, a1) entry=entry
    entry:
      let v0 = Unit
      let v1 = alloc { just: a1, nothing: v0 }
      return v1",
    "name": "Maybe",
    "normalized": "λ(a: Type) -> (closure: Variant [ just: a, nothing: Unit ] -| Γ: a)",
    "solverTrace": "=== Formula ===
  true

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]",
    "type": "Π(t1: Type) -> Type",
    "validity": "valid",
  },
  {
    "codegenJS": "function main() {
  const v0 = 42;
  const v1 = {
    just: v0
  };
  return v1;
}
return main();
",
    "elaborated": "Struct [ just: 42 ]",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"maybeNum"}
[3] app {"icit":"Explicit"}
  :arg -> [5]
  :func -> [4]
[4] lit {"value":{"type":"Atom","value":"Struct"}}
[5] row:ext {"label":"just"}
  :rest -> [7]
  :value -> [6]
[6] lit {"value":{"type":"Num","value":42}}
[7] row:empty",
    "ivl": "true",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = 42
      let v1 = alloc { just: v0 }
      return v1",
    "name": "maybeNum",
    "normalized": "Struct [ just: 42 ]",
    "solverTrace": "=== Formula ===
  true

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]",
    "type": "Variant [ just: Num, nothing: Unit ]",
    "validity": "valid",
  },
  {
    "codegenJS": "function main() {
  const v0 = null;
  const v1 = {
    nothing: v0
  };
  return v1;
}
return main();
",
    "elaborated": "Struct [ nothing: unit ]",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"maybeStr"}
[3] app {"icit":"Explicit"}
  :arg -> [5]
  :func -> [4]
[4] lit {"value":{"type":"Atom","value":"Struct"}}
[5] row:ext {"label":"nothing"}
  :rest -> [7]
  :value -> [6]
[6] lit {"value":{"type":"unit"}}
[7] row:empty",
    "ivl": "true",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = unit
      let v1 = alloc { nothing: v0 }
      return v1",
    "name": "maybeStr",
    "normalized": "Struct [ nothing: unit ]",
    "solverTrace": "=== Formula ===
  true

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]",
    "type": "Variant [ just: String, nothing: Unit ]",
    "validity": "valid",
  },
]
`;

exports[`Language Tour — Type Constructors > recursive types — List 1`] = `
[
  {
    "codegenJS": "function main() {
  return v0;
}
return main();
",
    "elaborated": "List",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"List"}
[3] mu {"variable":"x","source":"List","level":1}
  :annotation -> [4]
  :body -> [7]
[4] pi {"variable":"t1","icit":"Explicit","level":1}
  :annotation -> [5]
  :body -> [6]
[5] lit {"value":{"type":"Atom","value":"Type"}}
[6] lit {"value":{"type":"Atom","value":"Type"}}
[7] lambda {"variable":"a","icit":"Explicit","level":2}
  :annotation -> [8]
  :body -> [9]
  :env -> [24]
[8] lit {"value":{"type":"Atom","value":"Type"}}
[9] app {"icit":"Explicit"}
  :arg -> [11]
  :func -> [10]
[10] lit {"value":{"type":"Atom","value":"Variant"}}
[11] row:ext {"label":"cons"}
  :rest -> [21]
  :value -> [12]
[12] app {"icit":"Explicit"}
  :arg -> [14]
  :func -> [13]
[13] lit {"value":{"type":"Atom","value":"Schema"}}
[14] row:ext {"label":"1"}
  :rest -> [18]
  :value -> [15]
[15] app {"icit":"Explicit"}
  :arg -> [17]
  :func -> [16]
[16] var:bound {"index":1}
  :refers_to -> [3]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [7] {"level":2}
[17] var:bound {"index":0}
  :refers_to -> [7]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [7] {"level":2}
[18] row:ext {"label":"0"}
  :rest -> [20]
  :value -> [19]
[19] var:bound {"index":0}
  :refers_to -> [7]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [7] {"level":2}
[20] row:empty
[21] row:ext {"label":"nil"}
  :rest -> [23]
  :value -> [22]
[22] lit {"value":{"type":"Atom","value":"Unit"}}
[23] row:empty
[24] env
  :capture -> [3] {"index":0}
[25] closure
  :body -> [7]
  :env -> [24]",
    "ivl": "true",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      return v0",
    "name": "List",
    "normalized": "List",
    "solverTrace": "=== Formula ===
  true

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]",
    "type": "Π(t1: Type) -> Type",
    "validity": "valid",
  },
  {
    "codegenJS": "function main() {
  const v0 = null;
  const v1 = {
    nil: v0
  };
  return v1;
}
return main();
",
    "elaborated": "Struct [ nil: unit ]",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"empty"}
[3] app {"icit":"Explicit"}
  :arg -> [5]
  :func -> [4]
[4] lit {"value":{"type":"Atom","value":"Struct"}}
[5] row:ext {"label":"nil"}
  :rest -> [7]
  :value -> [6]
[6] lit {"value":{"type":"unit"}}
[7] row:empty",
    "ivl": "true",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = unit
      let v1 = alloc { nil: v0 }
      return v1",
    "name": "empty",
    "normalized": "Struct [ nil: unit ]",
    "solverTrace": "=== Formula ===
  true

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]",
    "type": "(List) Num",
    "validity": "valid",
  },
  {
    "codegenJS": "function main() {
  const v0 = 1;
  const v1 = null;
  const v2 = {
    nil: v1
  };
  const v3 = {
    0: v0,
    1: v2
  };
  const v4 = {
    cons: v3
  };
  return v4;
}
return main();
",
    "elaborated": "Struct [ cons: Struct [ 0: 1, 1: Struct [ nil: unit ] ] ]",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"listOf1"}
[3] app {"icit":"Explicit"}
  :arg -> [5]
  :func -> [4]
[4] lit {"value":{"type":"Atom","value":"Struct"}}
[5] row:ext {"label":"cons"}
  :rest -> [17]
  :value -> [6]
[6] app {"icit":"Explicit"}
  :arg -> [8]
  :func -> [7]
[7] lit {"value":{"type":"Atom","value":"Struct"}}
[8] row:ext {"label":"0"}
  :rest -> [10]
  :value -> [9]
[9] lit {"value":{"type":"Num","value":1}}
[10] row:ext {"label":"1"}
  :rest -> [16]
  :value -> [11]
[11] app {"icit":"Explicit"}
  :arg -> [13]
  :func -> [12]
[12] lit {"value":{"type":"Atom","value":"Struct"}}
[13] row:ext {"label":"nil"}
  :rest -> [15]
  :value -> [14]
[14] lit {"value":{"type":"unit"}}
[15] row:empty
[16] row:empty
[17] row:empty",
    "ivl": "true",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = 1
      let v1 = unit
      let v2 = alloc { nil: v1 }
      let v3 = alloc { 0: v0, 1: v2 }
      let v4 = alloc { cons: v3 }
      return v4",
    "name": "listOf1",
    "normalized": "Struct [ cons: Struct [ 0: 1, 1: Struct [ nil: unit ] ] ]",
    "solverTrace": "=== Formula ===
  true

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]",
    "type": "(List) Num",
    "validity": "valid",
  },
  {
    "codegenJS": "function main() {
  const v0 = 1;
  const v1 = 2;
  const v2 = 3;
  const v3 = null;
  const v4 = {
    nil: v3
  };
  const v5 = {
    0: v2,
    1: v4
  };
  const v6 = {
    cons: v5
  };
  const v7 = {
    0: v1,
    1: v6
  };
  const v8 = {
    cons: v7
  };
  const v9 = {
    0: v0,
    1: v8
  };
  const v10 = {
    cons: v9
  };
  return v10;
}
return main();
",
    "elaborated": "Struct
  [ cons: Struct
      [ 0: 1,
        1: Struct
          [ cons: Struct
              [ 0: 2,
                1: Struct
                  [ cons: Struct [ 0: 3, 1: Struct [ nil: unit ] ] ] ] ] ] ]",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"listOf3"}
[3] app {"icit":"Explicit"}
  :arg -> [5]
  :func -> [4]
[4] lit {"value":{"type":"Atom","value":"Struct"}}
[5] row:ext {"label":"cons"}
  :rest -> [37]
  :value -> [6]
[6] app {"icit":"Explicit"}
  :arg -> [8]
  :func -> [7]
[7] lit {"value":{"type":"Atom","value":"Struct"}}
[8] row:ext {"label":"0"}
  :rest -> [10]
  :value -> [9]
[9] lit {"value":{"type":"Num","value":1}}
[10] row:ext {"label":"1"}
  :rest -> [36]
  :value -> [11]
[11] app {"icit":"Explicit"}
  :arg -> [13]
  :func -> [12]
[12] lit {"value":{"type":"Atom","value":"Struct"}}
[13] row:ext {"label":"cons"}
  :rest -> [35]
  :value -> [14]
[14] app {"icit":"Explicit"}
  :arg -> [16]
  :func -> [15]
[15] lit {"value":{"type":"Atom","value":"Struct"}}
[16] row:ext {"label":"0"}
  :rest -> [18]
  :value -> [17]
[17] lit {"value":{"type":"Num","value":2}}
[18] row:ext {"label":"1"}
  :rest -> [34]
  :value -> [19]
[19] app {"icit":"Explicit"}
  :arg -> [21]
  :func -> [20]
[20] lit {"value":{"type":"Atom","value":"Struct"}}
[21] row:ext {"label":"cons"}
  :rest -> [33]
  :value -> [22]
[22] app {"icit":"Explicit"}
  :arg -> [24]
  :func -> [23]
[23] lit {"value":{"type":"Atom","value":"Struct"}}
[24] row:ext {"label":"0"}
  :rest -> [26]
  :value -> [25]
[25] lit {"value":{"type":"Num","value":3}}
[26] row:ext {"label":"1"}
  :rest -> [32]
  :value -> [27]
[27] app {"icit":"Explicit"}
  :arg -> [29]
  :func -> [28]
[28] lit {"value":{"type":"Atom","value":"Struct"}}
[29] row:ext {"label":"nil"}
  :rest -> [31]
  :value -> [30]
[30] lit {"value":{"type":"unit"}}
[31] row:empty
[32] row:empty
[33] row:empty
[34] row:empty
[35] row:empty
[36] row:empty
[37] row:empty",
    "ivl": "true",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = 1
      let v1 = 2
      let v2 = 3
      let v3 = unit
      let v4 = alloc { nil: v3 }
      let v5 = alloc { 0: v2, 1: v4 }
      let v6 = alloc { cons: v5 }
      let v7 = alloc { 0: v1, 1: v6 }
      let v8 = alloc { cons: v7 }
      let v9 = alloc { 0: v0, 1: v8 }
      let v10 = alloc { cons: v9 }
      return v10",
    "name": "listOf3",
    "normalized": "Struct
  [ cons: Struct
      [ 0: 1,
        1: Struct
          [ cons: Struct
              [ 0: 2,
                1: Struct
                  [ cons: Struct [ 0: 3, 1: Struct [ nil: unit ] ] ] ] ] ] ]",
    "solverTrace": "=== Formula ===
  true

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]",
    "type": "(List) Num",
    "validity": "valid",
  },
]
`;

exports[`Language Tour — Type Constructors > recursive types — Peano 1`] = `
[
  {
    "codegenJS": "function main() {
  return v0;
}
return main();
",
    "elaborated": "Peano",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"Peano"}
[3] mu {"variable":"x","source":"Peano","level":1}
  :annotation -> [4]
  :body -> [5]
[4] lit {"value":{"type":"Atom","value":"Type"}}
[5] app {"icit":"Explicit"}
  :arg -> [7]
  :func -> [6]
[6] lit {"value":{"type":"Atom","value":"Variant"}}
[7] row:ext {"label":"succ"}
  :rest -> [9]
  :value -> [8]
[8] var:bound {"index":0}
  :refers_to -> [3]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
[9] row:ext {"label":"zero"}
  :rest -> [11]
  :value -> [10]
[10] lit {"value":{"type":"Atom","value":"Unit"}}
[11] row:empty",
    "ivl": "true",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      return v0",
    "name": "Peano",
    "normalized": "Peano",
    "solverTrace": "=== Formula ===
  true

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]",
    "type": "Type",
    "validity": "valid",
  },
  {
    "codegenJS": "function main() {
  const v0 = null;
  const v1 = {
    zero: v0
  };
  return v1;
}
return main();
",
    "elaborated": "Struct [ zero: unit ]",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"zero"}
[3] app {"icit":"Explicit"}
  :arg -> [5]
  :func -> [4]
[4] lit {"value":{"type":"Atom","value":"Struct"}}
[5] row:ext {"label":"zero"}
  :rest -> [7]
  :value -> [6]
[6] lit {"value":{"type":"unit"}}
[7] row:empty",
    "ivl": "true",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = unit
      let v1 = alloc { zero: v0 }
      return v1",
    "name": "zero",
    "normalized": "Struct [ zero: unit ]",
    "solverTrace": "=== Formula ===
  true

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]",
    "type": "Peano",
    "validity": "valid",
  },
  {
    "codegenJS": "function main() {
  const v0 = zero;
  const v1 = {
    succ: v0
  };
  return v1;
}
return main();
",
    "elaborated": "Struct [ succ: zero ]",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"first"}
[3] app {"icit":"Explicit"}
  :arg -> [5]
  :func -> [4]
[4] lit {"value":{"type":"Atom","value":"Struct"}}
[5] row:ext {"label":"succ"}
  :rest -> [8]
  :value -> [7]
[6] var:free {"name":"zero"}
[7] var:ref {"name":"zero"}
  :refers_to -> [6]
  :scope -> [2] {"level":0}
[8] row:empty",
    "ivl": "true",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = zero
      let v1 = alloc { succ: v0 }
      return v1",
    "name": "first",
    "normalized": "Struct [ succ: Struct [ zero: unit ] ]",
    "solverTrace": "=== Formula ===
  true

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]",
    "type": "Peano",
    "validity": "valid",
  },
  {
    "codegenJS": "function main() {
  const v0 = first;
  const v1 = {
    succ: v0
  };
  return v1;
}
return main();
",
    "elaborated": "Struct [ succ: first ]",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"second"}
[3] app {"icit":"Explicit"}
  :arg -> [5]
  :func -> [4]
[4] lit {"value":{"type":"Atom","value":"Struct"}}
[5] row:ext {"label":"succ"}
  :rest -> [8]
  :value -> [7]
[6] var:free {"name":"first"}
[7] var:ref {"name":"first"}
  :refers_to -> [6]
  :scope -> [2] {"level":0}
[8] row:empty",
    "ivl": "true",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = first
      let v1 = alloc { succ: v0 }
      return v1",
    "name": "second",
    "normalized": "Struct [ succ: Struct [ succ: Struct [ zero: unit ] ] ]",
    "solverTrace": "=== Formula ===
  true

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]",
    "type": "Peano",
    "validity": "valid",
  },
]
`;
